tests/ui/range/range_traits-6.rs
use std::ops::*;

#[derive(Copy, Clone)]
struct R(RangeInclusive<usize>); //~ ERROR Copy

fn main() {}
